# lre-scripts

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/scripts/preliminary_design/: schemas.py  script.py
src/services/: flow.py  geometric.py  isentropic.py  schemas.py
