[project]
name = "lre-scripts"
version = "0.1.0"
description = "Liquid rocket engine design scripts"
authors = [
    {name = "Felipe Bogaerts de Mattos",email = "me@felipebm.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "cantera (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
