[project]
name = "lre-scripts"
version = "0.1.0"
description = "Liquid rocket engine design scripts"
authors = [
    {name = "Felipe Bogaerts de Mattos",email = "me@felipebm.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "cantera (>=3.1.0,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "scripts", from = "src" },
    { include = "services", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]

[tool.poetry.scripts]
preliminary-design = "scripts.preliminary_design.script:main"